Bug Fix - Index Schedule Details Spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -85,6 +85,7 @@
     font-size: 120%;
     border-radius: 25px;
     border: 1px solid #fff;
+    padding: 10px;
 }
 
 /* Section - schedule - details - hover */
